CAMEL-22178 - Added docs for AWS Textract
Signed-off-by: Andrea Cosentino <ancosen@gmail.com>

--- a/docs/components/modules/ROOT/nav.adoc
+++ b/docs/components/modules/ROOT/nav.adoc
@@ -56,6 +56,7 @@
 *** xref:aws2-sns-component.adoc[AWS Simple Notification System (SNS)]
 *** xref:aws2-sqs-component.adoc[AWS Simple Queue Service (SQS)]
 *** xref:aws2-step-functions-component.adoc[AWS StepFunctions]
+*** xref:aws2-textract-component.adoc[AWS Textract]
 *** xref:aws2-timestream-component.adoc[AWS Timestream]
 *** xref:aws2-translate-component.adoc[AWS Translate]
 *** xref:pqc-component.adoc[PQC Algorithms]
