--- a/components/camel-telemetry-dev/src/main/docs/telemetry-dev.adoc
+++ b/components/camel-telemetry-dev/src/main/docs/telemetry-dev.adoc
@@ -27,9 +27,7 @@ The configuration properties for the Telemetry component are:
 |`camel.telemetryDev.enabled`| false | Turn the tracing on/off.
 |`camel.telemetryDev.traceFormat`| default | The format used to trace in the log (default, tree, json).
 |`camel.telemetryDev.traceProcessors`| false | Trace inner processors.
-|`camel.telemetryDev.excludePatterns` |  | Sets exclude pattern(s) that will disable tracing for Camel
-messages that matches the pattern. The content is a Set<String> where the key is a pattern. The pattern
-uses the rules from Intercept.
+|`camel.telemetryDev.excludePatterns` |  | Sets exclude pattern that will disable tracing for those spans that matches the pattern. The variable is a comma separated values of filters to execute (eg, `log*,direct*,setBody*`, ...)
 |=======================================================================
 
 == Tracing format
