--- a/components/camel-telemetry/src/main/docs/telemetry.adoc
+++ b/components/camel-telemetry/src/main/docs/telemetry.adoc
@@ -27,9 +27,7 @@ The configuration properties for the Telemetry component are:
 |=======================================================================
 |Option |Default |Description
 |`camel.component.telemetry.traceProcessors`| false | Trace inner processors.
-|`camel.component.telemetry.excludePatterns` |  | Sets exclude pattern(s) that will disable tracing for Camel
-messages that matches the pattern. The content is a Set<String> where the key is a pattern. The pattern
-uses the rules from Intercept.
+|`camel.component.telemetry.excludePatterns` |  | Sets exclude pattern that will disable tracing for those spans that matches the pattern. The variable is a comma separated values of filters to execute (eg, `log*,direct*,setBody*`, ...)
 |=======================================================================
 
 == Tracing structure
