--- a/docs/user-manual/modules/ROOT/pages/event-notifier.adoc
+++ b/docs/user-manual/modules/ROOT/pages/event-notifier.adoc
@@ -1,8 +1,11 @@
 = EventNotifier
 
 The event notifier `org.apache.camel.spi.EventNotifier` is used to get notified about events within the CamelContext. For example, when a route is started or stopped.
-The events are collected independently from the CamelContext (routes, services, exchanges, and so on). This means that the notifier doesn't interfere with the rest of Camel, and
+The events are collected independently of the CamelContext (routes, services, exchanges, and so on). This means that the notifier doesn't interfere with the rest of Camel, and
 the events can be processed independently for logging, data offloading or other type of actions.
+
+IMPORTANT: The event is called from the current thread so be careful if you do some processing that takes a long time. If so it's recommended
+to execute this work from another thread, so the current thread can continue and is not blocked for a longer period of time.
 
 == Type of Events
 
@@ -72,9 +75,7 @@ public class MyCollector extends EventNotifierSupport {
 
     @Override
     public void notify(CamelEvent event) throws Exception {
-
-        log.info("Event: " event.getType().name());
-
+        log.info("Event: " + event.getType().name());
     }
 
 }
@@ -90,8 +91,8 @@ context.getManagementStrategy().addEventNotifier(new MyCollector());
 
 == Collect Specific Events
 
-By default you get notified by all events. It's however possible to exclude certain groups of events to get
-only the group of event you are interest in.
+By default, you get notified by all events. It's however possible to exclude certain groups of events to get
+only the group of event you are interested in.
 
 In the following example we collect only StepEvents:
 
