CAMEL-22432 - Camel-Kafka: Support breakOnFirstError for Batching mode too - Docs and examples
Signed-off-by: Andrea Cosentino <ancosen@gmail.com>

--- a/components/camel-kafka/src/main/docs/kafka-component.adoc
+++ b/components/camel-kafka/src/main/docs/kafka-component.adoc
@@ -520,6 +520,235 @@ public void configure() {
 }
 ----
 
+===== Break on First Error in Batching Mode
+
+The `breakOnFirstError` option is also supported in batching mode, providing the same error handling behavior as in streaming mode but applied to batch processing.
+
+When `breakOnFirstError=true` is configured with batching enabled:
+
+* **Auto Commit Mode**: When an error occurs during batch processing, Camel will commit the current batch position and trigger a consumer reconnection. This allows the problematic batch to be retried on the next polling cycle.
+
+* **Manual Commit Mode**: When an error occurs, the route's error handler is responsible for performing the manual commit (if desired) before the consumer reconnects.
+
+* **Reconnection**: After an error triggers `breakOnFirstError`, the consumer automatically reconnects and resumes polling from the committed position.
+
+The behavior is consistent with streaming mode, ensuring that error handling patterns work similarly across both processing modes.
+
+Example with automatic commits:
+
+[tabs]
+====
+Java DSL::
++
+[source,java]
+----
+from("kafka:topic?groupId=myGroup&pollTimeoutMs=1000&batching=true&maxPollRecords=10&breakOnFirstError=true&autoCommitEnable=true")
+    .process(e -> {
+        final List<?> exchanges = e.getMessage().getBody(List.class);
+        // Process batch - any exception will trigger breakOnFirstError behavior
+        for (Object exchange : exchanges) {
+            // ... processing logic
+        }
+    }).to("mock:result");
+----
+
+YAML::
++
+[source,yaml]
+----
+- route:
+    from:
+      uri: "kafka:topic"
+      parameters:
+        groupId: "myGroup"
+        pollTimeoutMs: 1000
+        batching: true
+        maxPollRecords: 10
+        breakOnFirstError: true
+        autoCommitEnable: true
+    steps:
+      - process:
+          ref: "batchProcessor"
+      - to: "mock:result"
+----
+
+Processor Implementation::
++
+[source,java]
+----
+@Component("batchProcessor")
+public class BatchProcessor implements Processor {
+    private static final Logger LOG = LoggerFactory.getLogger(BatchProcessor.class);
+
+    @Override
+    public void process(Exchange exchange) throws Exception {
+        final List<?> exchanges = exchange.getMessage().getBody(List.class);
+
+        if (exchanges == null || exchanges.isEmpty()) {
+            return;
+        }
+
+        // Process each exchange in the batch
+        for (Object obj : exchanges) {
+            if (obj instanceof Exchange batchExchange) {
+                String body = batchExchange.getMessage().getBody(String.class);
+                LOG.info("Processing exchange with body: {}", body);
+
+                // Your business logic here
+                // Any exception thrown will trigger breakOnFirstError behavior
+                processMessage(body);
+            }
+        }
+    }
+
+    private void processMessage(String message) {
+        // Implement your message processing logic
+        // Throw exceptions for error conditions that should trigger breakOnFirstError
+        if (message.contains("error")) {
+            throw new RuntimeException("Processing failed for message: " + message);
+        }
+    }
+}
+----
+====
+
+Example with manual commits:
+
+[tabs]
+====
+Java DSL::
++
+[source,java]
+----
+// Error handler that performs manual commit before reconnection
+onException(Exception.class)
+    .handled(false)
+    .process(exchange -> {
+        // Commit manually when error occurs
+        KafkaManualCommit manual = exchange.getMessage()
+            .getHeader(KafkaConstants.MANUAL_COMMIT, KafkaManualCommit.class);
+        manual.commit();
+    });
+
+from("kafka:topic?groupId=myGroup&batching=true&breakOnFirstError=true&autoCommitEnable=false&allowManualCommit=true")
+    .process(e -> {
+        final List<?> exchanges = e.getMessage().getBody(List.class);
+        // Process batch - errors will be handled by the error handler above
+        for (Object exchange : exchanges) {
+            // ... processing logic
+        }
+    })
+    .process(exchange -> {
+        // Manual commit on successful processing
+        KafkaManualCommit manual = exchange.getMessage()
+            .getHeader(KafkaConstants.MANUAL_COMMIT, KafkaManualCommit.class);
+        manual.commit();
+    })
+    .to("mock:result");
+----
+
+YAML::
++
+[source,yaml]
+----
+- route:
+    on-exception:
+      - exception: "java.lang.Exception"
+        handled: false
+        steps:
+          - process:
+              ref: "errorCommitProcessor"
+    from:
+      uri: "kafka:topic"
+      parameters:
+        groupId: "myGroup"
+        batching: true
+        breakOnFirstError: true
+        autoCommitEnable: false
+        allowManualCommit: true
+    steps:
+      - process:
+          ref: "batchProcessorManual"
+      - process:
+          ref: "successCommitProcessor"
+      - to: "mock:result"
+----
+
+Processor Implementations::
++
+[source,java]
+----
+@Component("batchProcessorManual")
+public class BatchProcessorManual implements Processor {
+    private static final Logger LOG = LoggerFactory.getLogger(BatchProcessorManual.class);
+
+    @Override
+    public void process(Exchange exchange) throws Exception {
+        final List<?> exchanges = exchange.getMessage().getBody(List.class);
+
+        if (exchanges == null || exchanges.isEmpty()) {
+            return;
+        }
+
+        // Process each exchange in the batch
+        for (Object obj : exchanges) {
+            if (obj instanceof Exchange batchExchange) {
+                String body = batchExchange.getMessage().getBody(String.class);
+                LOG.info("Processing exchange with body: {}", body);
+
+                // Your business logic here
+                // Errors will be handled by the error handler
+                processMessage(body);
+            }
+        }
+    }
+
+    private void processMessage(String message) {
+        // Implement your message processing logic
+        if (message.contains("error")) {
+            throw new RuntimeException("Processing failed for message: " + message);
+        }
+    }
+}
+
+@Component("errorCommitProcessor")
+public class ErrorCommitProcessor implements Processor {
+    private static final Logger LOG = LoggerFactory.getLogger(ErrorCommitProcessor.class);
+
+    @Override
+    public void process(Exchange exchange) throws Exception {
+        LOG.warn("Error occurred, performing manual commit before reconnection");
+
+        KafkaManualCommit manual = exchange.getMessage()
+            .getHeader(KafkaConstants.MANUAL_COMMIT, KafkaManualCommit.class);
+
+        if (manual != null) {
+            manual.commit();
+            LOG.info("Manual commit completed after error");
+        }
+    }
+}
+
+@Component("successCommitProcessor")
+public class SuccessCommitProcessor implements Processor {
+    private static final Logger LOG = LoggerFactory.getLogger(SuccessCommitProcessor.class);
+
+    @Override
+    public void process(Exchange exchange) throws Exception {
+        LOG.debug("Batch processed successfully, performing manual commit");
+
+        KafkaManualCommit manual = exchange.getMessage()
+            .getHeader(KafkaConstants.MANUAL_COMMIT, KafkaManualCommit.class);
+
+        if (manual != null) {
+            manual.commit();
+            LOG.debug("Manual commit completed after successful processing");
+        }
+    }
+}
+----
+====
+
 ==== Manual Commits
 
 When working with batch processing with manual commits, it's up to the application to commit the records, and handle the outcome of potentially invalid records.
