Camel-AWS2-S3 Streaming Upload: Implement timestamp-based file grouping for AWS S3 streaming upload
Signed-off-by: Andrea Cosentino <ancosen@gmail.com>

--- a/components/camel-aws/camel-aws2-s3/src/main/docs/aws2-s3-component.adoc
+++ b/components/camel-aws/camel-aws2-s3/src/main/docs/aws2-s3-component.adoc
@@ -421,6 +421,8 @@ The upload will be completed when the batchSize has been completed or the batchM
 There are two possible naming strategies: progressive and random.
 With the progressive strategy, each file will have the name composed by keyName option and a progressive counter, and eventually the file extension (if any), while with the random strategy a UUID will be added after keyName and eventually the file extension will be appended.
 
+Additionally, streaming upload mode supports timestamp-based file grouping, which allows messages to be automatically grouped into time windows based on their timestamps.
+
 As an example:
 
 [source,java]
@@ -477,6 +479,106 @@ from(kafka("topic1").brokers("localhost:9092"))
 --------------------------------------------------------------------------------
 
 In this case, the upload will be completed after 10 seconds.
+
+==== Timestamp Grouping
+
+The streaming upload mode also supports timestamp-based file grouping, which allows messages to be automatically grouped into time windows and written to the same S3 file based on their timestamps. This feature enables append-like behavior where messages with timestamps falling within the same time window are combined into a single file.
+
+To enable timestamp grouping, use the following configuration options:
+
+- `timestampGroupingEnabled`: Set to `true` to enable timestamp-based grouping (default: `false`)
+- `timestampWindowSizeMillis`: The size of the time window in milliseconds (default: `300000` = 5 minutes)
+- `timestampHeaderName`: The name of the message header containing the timestamp (default: `Exchange.MESSAGE_TIMESTAMP`)
+
+Messages are grouped based on their timestamps extracted from the specified header. The timestamp can be provided as:
+
+- Long: Unix timestamp in milliseconds
+- Date: Java Date object
+- String: String representation of Unix timestamp in milliseconds
+
+Files are automatically named using a timestamp-based pattern that includes the time window information.
+
+===== Example Configuration
+
+Basic timestamp grouping with 5-minute windows:
+
+[source,java]
+--------------------------------------------------------------------------------
+from("timer:messages?period=10000")
+    .setHeader(Exchange.MESSAGE_TIMESTAMP, simple("${date:now:timestamp}"))
+    .setBody(constant("Message with timestamp"))
+    .to("aws2-s3://my-bucket?streamingUploadMode=true"
+        + "&timestampGroupingEnabled=true"
+        + "&timestampWindowSizeMillis=300000"
+        + "&keyName=grouped-messages.txt");
+--------------------------------------------------------------------------------
+
+Custom window size (1 minute) with custom header name:
+
+[source,java]
+--------------------------------------------------------------------------------
+from("direct:timestamped")
+    .setHeader("MyTimestamp", simple("${date:now:timestamp}"))
+    .setBody("Custom timestamped message")
+    .to("aws2-s3://my-bucket?streamingUploadMode=true"
+        + "&timestampGroupingEnabled=true"
+        + "&timestampWindowSizeMillis=60000"
+        + "&timestampHeaderName=MyTimestamp"
+        + "&keyName=custom-grouped.txt");
+--------------------------------------------------------------------------------
+
+Large files with multipart and timestamp grouping:
+
+[source,java]
+--------------------------------------------------------------------------------
+from("direct:large-timestamped")
+    .setHeader(Exchange.MESSAGE_TIMESTAMP, simple("${date:now:timestamp}"))
+    .setBody("Large message content...")
+    .to("aws2-s3://my-bucket?streamingUploadMode=true"
+        + "&timestampGroupingEnabled=true"
+        + "&timestampWindowSizeMillis=1800000"  // 30 minutes
+        + "&multiPartUpload=true"
+        + "&partSize=5242880"  // 5MB parts
+        + "&keyName=large-grouped.txt");
+--------------------------------------------------------------------------------
+
+===== File Naming
+
+Files are automatically named using the following pattern:
+```
+{baseFileName}_{YYYYMMDD}_{HHMM}_{HHMM-HHMM}.{extension}
+```
+
+For time windows smaller than 1 minute, seconds precision is used:
+```
+{baseFileName}_{YYYYMMDD}_{HHMMSS}_{HHMMSS-HHMMSS}.{extension}
+```
+
+Example file names:
+- 5-minute window: `messages_20240101_0800_0800-0805.txt`
+- 1-minute window: `data_20240315_1430_1430-1431.log`
+- 5-second window: `events_20241225_000000_000000-000005.json`
+
+===== Time Window Examples
+
+With a 5-minute window (300000ms):
+- Window 1: 08:00:00 - 08:04:59 → `file_20240101_0800_0800-0805.txt`
+- Window 2: 08:05:00 - 08:09:59 → `file_20240101_0805_0805-0810.txt`
+- Window 3: 08:10:00 - 08:14:59 → `file_20240101_0810_0810-0815.txt`
+
+===== Fallback Behavior
+
+- If no timestamp header is found, the current system time is used
+- If the timestamp header contains invalid data, the current system time is used
+- Warning messages are logged when fallback behavior occurs
+
+===== Performance Considerations
+
+- Multiple concurrent time windows are supported
+- Each window maintains its own upload state
+- Memory usage scales with the number of active time windows
+- Completed windows are automatically cleaned up
+- Works with all existing streaming upload features (multipart uploads, timeouts, etc.)
 
 === Bucket Auto-creation
 
